apps/3rd/istio/gateways/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - hosts:
        - "*.mydomain.com"
      port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - "argocd.mydomain.com"
      port:
        number: 443
        name: argocd
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: argocd-credential
    - hosts:
        - "guestbook.mydomain.com"
      port:
        number: 443
        name: guestbook
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: guestbook-credential
